handle multiple series properly. partial implemenation of spline interpolator.